--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-size: 15pt;
   background-color: #FFAB65;
+  font-family: sans-serif;
 }
 .remorseful {
   background-color: #880000;
